fixed spacing between icons

--- a/packages/code/widget/widget_icon.css
+++ b/packages/code/widget/widget_icon.css
@@ -13,7 +13,7 @@
 
 .widget-icon-icon+.widget-icon-icon
 {
-    margin-left:0px;
+    margin-left:20px;
 }
 
 .widget-icon-list+.widget-icon-list
